--- a/roles/docker-adguardhome/tasks/main.yml
+++ b/roles/docker-adguardhome/tasks/main.yml
@@ -18,6 +18,14 @@
   tags:
     - configuration
 
+- name: Create docker folder
+  ansible.builtin.file:
+    path: "{{docker_root}}"
+    state: directory
+    mode: '0755'
+  tags:
+    - configuration
+
 - name: Push docker-compose
   template:
     src: '{{ docker_compose }}.j2'
